--- a/src/index.css
+++ b/src/index.css
@@ -3,16 +3,13 @@
 :root {
   --ct-color-bg-primary: #ffffff;
   --ct-color-bg-secundary: #f78b00;
-  --ct-color-bg-tertiary: #00285F;
-;
-
+  --ct-color-bg-tertiary: #00285f;
+  --ct-color-bg-quaternary: #ededed;
   --ct-color-font-primary: #000;
   --ct-color-font-secondary: #585858;
   --ct-color-font-tertiary: #00285f;
   --ct-color-font-quaternary: #ffffff;
   --ct-color-font-placeholder: #a7a7a7;
-
-  
 }
 
 * {
